# AgentOps-Eval-Platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: agentops-eval.yml
agentops_eval/: __init__.py  adapters.py  agentflow_adapter.py  baseline.py  bigdata_adapter.py  calibration.py  checks.py  cli.py  config.py  gate.py  http_agent.py  judging.py  mock_agent.py  models.py  monitor.py  monitoring.py  reporting.py  runner.py  security.py  suites.py  tracing.py
configs/: agents.mock.yaml  agents.yaml
docs/: adapters.md  agent-spec.md  eval-plan.md  operations.md
evals/: human_labels.sample.jsonl  sample.jsonl
tests/: __init__.py  test_baseline_gate.py  test_checks.py  test_cli.py  test_config.py  test_http_agent.py  test_judging_calibration.py  test_monitor.py  test_security.py  test_tracing_runner.py
